Return ErrorInfo from exceptions cleanup methods in ItemService